cards: Fix page height and card spacing.

--- a/_sass/cards.scss
+++ b/_sass/cards.scss
@@ -5,6 +5,7 @@ $card_min: 1920px;
 #cardboard {
     margin: 0 auto;
     max-width: 80%;
+    text-align: center;
 }
 
 .card {
@@ -12,11 +13,12 @@ $card_min: 1920px;
     border-radius: 4px 4px;
     margin: 1em 0 3em 0;
     padding: 1em;
+    text-align: left;
     @media screen and (min-width: $card_flex) {
         min-width: 350px;
         max-width: 40%;
         display: inline-block;
-        margin: 20px;
+        margin: 12px 15px;
         vertical-align: top;
         height: 14em;
     }
